--- a/index.html
+++ b/index.html
@@ -2,21 +2,65 @@
 <html lang="en">
 <head>
    <link rel="stylesheet" href="css/stylesheet.css">
-  <body>
   <head>
   <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lets code</title>
-    <body>
       
-   
+<header>
+  <nav class="navbar navbar-expand-lg" style="background-color: aqua;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Menu</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#education">education</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#experience">experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#skills">skills</a>
+          </li>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <script src="https://kit.fontawesome.com/042e0a6513.js" crossorigin="anonymous"></script>
+
+<!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
 <h1>more about me:(Lethabo Kgoale)</h1>
 
+<div id="mainImage">
+
 <img src="/image/20220422_164629.jpg" alt=""width=250>
-
 <li> I dream to be a person who inspires people on the web to be what they want to be and make them laugh.I am a 15 year old boy who lives in pretoria and is in grade 9 i play with my friends everyday gaming</li>
+</div> 
+</header>
 
+<Main>
+
+
+</Main>
+
+
+
+
+<body>
+  
+
+
+
+</header>
+<body>
+  
     <h1>Likes</h1>
   <li>gaming</li>
 <li>drawing</li>
@@ -30,12 +74,14 @@
           href="./css/stylesheet.css"
 
 
-
-    ><h2>hobbies</h2>
-<li>draw anime characters</li>
+><h1>hobbies</h1>
+<li>drawing</li>
 <li>gaming with friends</li>
 <li>youtube gaming channel</li>
-<li>mostly watching youtube or anime</li>
+<li>mostly watching youtube or anime or read manga</li>
+
+<h1>experience</h1>
+<li>none with coding</li>
 
 <h1>skills</h1>
 <li>good eye co-ordination</li>
@@ -43,9 +89,79 @@
 <li>like to do things fast and efficiently</li>
 
 <h1>education</h1>
+<h2>intro to web at <a href="https://www.codespace.co.za/" target="_blank">CodeSpace Academy</a></h2>
 <li>Basic education grade 9</li>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+</body>
+<footer>
  <h1>Cantact info</h1>
-<li>number:0662288986</li>
-<li>gmail:Kgoale.123@gmail.com</li>
+<form>
+
+<Label your="name">first name</Label>
+<input type="text" placeholder="please enter your name">
+
+<label for="email">email address</label>
+<input type="email" placeholder="email address">
+
+<br>
+<br>
+
+<label>why reach out to me</label>
+
+<select>
+
+<option>you have new project for me</option>
+<option>job offer</option>
+<option> colaboration</option>
+
+</select>
+
+<label>where should we meet?</label>
+<input type="checkbox">in person
+<input type="checkbox">google meet
+<input type="checkbox">zoom
+
+<br>
+<br>
+
+<label for="">pick a date</label>
+<input type="date">
+
+<label for="">pick a time</label>
+<input type="time">
+
+<input type="submit" value="send">
+
+
+</form>
+
+
+
+
 
 <a href="http://" target="_blank" rel="noopener noreferrer"></a>
+
+<div    class="wrapper">
+
+  <div class="socialmedia">
+ <i class="fab fa-facebook"></i>
+    <div class="icon">
+<a href="https://www.facebook.com/lethabo.kgoale.31/about"target="_blank"><span>facebook</span></a>
+
+<div>
+  <div class="socialmedia">
+  <i class="fab fa-github"></i>
+    <div class="icon">
+<a href="https://github.com/LethaboKgoale/code"target="_blank"><span>github</span></a>
+
+</div>
+<div class="socialmedia">
+<i class="fab fa-instagram"></i>
+    <div class="icon">
+<a href="https://www.instagram.com/snitchblast3r/"target="_blank"><span>instagram</span></a>
+
+</div>
+
+</footer>
+
