changed the picture

--- a/resume 10.html
+++ b/resume 10.html
@@ -40,7 +40,7 @@
 
 <div id="mainImage">
 
-<img src="/image/20220422_164629.jpg" alt=""width=250>
+<img src="/image/5daccaa3b791ebeda3d8f5634c14ca21.jpg" alt=""width=250>
 <li> I dream to be a person who inspires people on the web to be what they want to be and make them laugh.I am a 15 year old boy who lives in pretoria and is in grade 9 i play with my friends everyday gaming</li>
 </div> 
 </header>
