--- a/resume 10.html
+++ b/resume 10.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+<body>
+    
 <head>
    <link rel="stylesheet" href="css/stylesheet.css">
   <head>
   <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lets code</title>
+    <title>Lets code</title>
       
 <header>
   <nav class="navbar navbar-expand-lg" style="background-color: aqua;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Menu</a>
+      <a class="navbar-brand" href="#Menu">Menu</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#education">education</a>
+            <a class="nav-link active" aria-current="page" href="#Education">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#experience">experience</a>
+            <a class="nav-link active" href="#Experience">Experience</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#skills">skills</a>
+            <a class="nav-link active" href="#Skills">Skills</a>
           </li>
           </li>
         </ul>
@@ -44,20 +46,13 @@
 <li> I dream to be a person who inspires people on the web to be what they want to be and make them laugh.I am a 15 year old boy who lives in pretoria and is in grade 9 i play with my friends everyday gaming</li>
 </div> 
 </header>
+<body>
 
-<Main>
+  <main>
 
-
-</Main>
-
-
-
+  </main>
 
 <body>
-  
-
-
-
 </header>
 <body>
   
@@ -74,21 +69,21 @@
           href="./css/stylesheet.css"
 
 
-><h1>hobbies</h1>
+><h1>Hobbies</h1>
 <li>drawing</li>
 <li>gaming with friends</li>
 <li>youtube gaming channel</li>
 <li>mostly watching youtube or anime or read manga</li>
 
-<h1>experience</h1>
+<h1>Experience</h1>
 <li>none with coding</li>
 
-<h1>skills</h1>
+<h1>Skills</h1>
 <li>good eye co-ordination</li>
 <li>very good at gaming (most games)</li>
 <li>like to do things fast and efficiently</li>
 
-<h1>education</h1>
+<h1>Education</h1>
 <h2>intro to web at <a href="https://www.codespace.co.za/" target="_blank">CodeSpace Academy</a></h2>
 <li>Basic education grade 9</li>
 <!-- JavaScript Bundle with Popper -->
@@ -142,7 +137,7 @@
 
 <a href="http://" target="_blank" rel="noopener noreferrer"></a>
 
-<div    class="wrapper">
+<div>
 
   <div class="socialmedia">
  <i class="fab fa-facebook"></i>
@@ -164,4 +159,5 @@
 </div>
 
 </footer>
-
+  
+</body>
